[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/enemies/_enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/enemies/enemy_bomber/assets/bomb_enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/shaders/paper-material.tres" type="Material" id=3]
[ext_resource path="res://entities/enemies/enemy_bomber/bomber_bit_entity_mover.gd" type="Script" id=4]
[ext_resource path="res://entities/enemies/enemy_bomber/enemy_bomber.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=7]
radius = 28.5

[sub_resource type="CircleShape2D" id=5]
radius = 28.2511

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Graphics/main:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Graphics/main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base/Graphics/main:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Graphics/main:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -28 ), Vector2( 0, -38 ), Vector2( 0, -28 ) ]
}

[node name="EnemyBomber" instance=ExtResource( 1 )]
script = ExtResource( 5 )
MOVE_SPEED = 2.0

[node name="BitEntityMover" type="Node" parent="." index="0"]
script = ExtResource( 4 )
body_path = NodePath("..")

[node name="GraceTimer" type="Timer" parent="." index="1"]
wait_time = 3.0
one_shot = true

[node name="main" parent="Base/Graphics" index="0"]
material = ExtResource( 3 )
position = Vector2( 0, -28 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="." index="3" groups=[
"enemy",
"hitbox",
"trigger",
]]

[node name="1" type="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
position = Vector2( 0, -28 )
shape = SubResource( 7 )

[node name="Hurtbox" parent="." index="4" groups=[
"hurtbox",
]]

[node name="1" type="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 0, -24 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" parent="." index="5"]
autoplay = "idle"
anims/die = SubResource( 6 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )
[connection signal="timeout" from="GraceTimer" to="." method="_on_GraceTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
